Address further Eclipse warnings in IIOP projects